@@ -1,8 +1,7 @@
 package com.swift.evergrowfinance.controller;
 
-import com.swift.evergrowfinance.dto.UserBalanceDto;
+import com.swift.evergrowfinance.dto.UserBalanceDTO;
 import com.swift.evergrowfinance.model.entities.User;
-import com.swift.evergrowfinance.model.entities.Wallet;
 import com.swift.evergrowfinance.service.UserService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,40 +13,28 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
 @RequestMapping("/balance")
-public class UserBalance {
+public class UserBalanceController {
 
     private final UserService userService;
 
     @Autowired
-    public UserBalance(UserService userService) {
+    public UserBalanceController(UserService userService) {
         this.userService = userService;
     }
 
     @GetMapping("/{id}")
     @PreAuthorize("hasAnyAuthority('ADMIN','USER')")
-    public List<UserBalanceDto> getUserBalance(@PathVariable Long id) {
+    public List<UserBalanceDTO> getUserBalance(@PathVariable Long id) {
         User user = userService.getUserServById(id)
-                .orElseThrow(() -> {
-                    log.error("User with id {} not found", id);
-                    return new UsernameNotFoundException("User with id " + id + " not found");
-                });
+                .orElseThrow(() -> new UsernameNotFoundException("User with id " + id + " not found"));
 
-        log.info("Retrieving balance for user with id {} ", id);
         return user.getWallets().stream()
-                .map(this::toUserBalanceDto)
-                .toList();
-    }
-
-    private UserBalanceDto toUserBalanceDto(Wallet wallet) {
-        return UserBalanceDto.builder()
-                .email(wallet.getUser().getEmail())
-                .phoneNumber(wallet.getPhoneNumber())
-                .walletType(wallet.getWalletType().name())
-                .balance(wallet.getBalance())
-                .build();
+                .map(UserBalanceDTO::fromWallet)
+                .collect(Collectors.toList());
     }
 }
